--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -82,7 +82,7 @@
   <h2 id="comandante" class="efecto"></h2>
 
   <div class="contenedor-planetas">
-    <div class="planeta" onclick="viajar('Planeta 1', 'planeta1.html')">
+    <div class="planeta" onclick="viajar('Planeta 1', 'https://cgviviana.github.io/Juego_Prueba/Proyecto/Planeta1/')">
       <p>Planeta 1</p>
       <img src="p1.png" alt="Planeta 1">
     </div>
