--- a/Proyecto/Planeta1/index.html
+++ b/Proyecto/Planeta1/index.html
@@ -149,14 +149,12 @@
 }
   to { opacity: 1; transform: scale(1); }
 }
+  to { opacity: 1; transform: scale(1); }
+}
 @keyframes aparecerEstrella {
   0% { transform: scale(0.5); opacity: 0; }
   100% { transform: scale(1); opacity: 1; }
 }
-  100% { transform: scale(1); opacity: 1; }
-}
-@keyframes aparecerEstrella {
-  0% { transform: scale(0.5); opacity: 0; }
   100% { transform: scale(1); opacity: 1; }
 }
 </style>
@@ -192,7 +190,8 @@
     </div>
   </div>
   <script>
-    let misionesCompletadas = 0;
+    // Eliminado duplicado
+
     const params = new URLSearchParams(window.location.search);
     const nombre = params.get("nombre");
 
@@ -231,10 +230,11 @@
           document.body.style.opacity = "0";
           setTimeout(() => {
             window.location.href = "../";
-          }, 13000);
-        }, 2000);
+          }, 10000);
         }, 2000);
       }
+  
+    }
   </script>
 </body>
 </html>
