Create index.html for dog bone sorting game

--- a/Vale/Perro/Huesos/1/básico/index.html
+++ b/Vale/Perro/Huesos/1/básico/index.html
@@ -1,1 +1,298 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<title>Ordenar Huesos del Perro</title>
+<style>
+body{
+  margin:0;
+  font-family:Segoe UI, sans-serif;
+  background:#1a1a1a;
+}
+.bg{
+  position:fixed;
+  inset:0;
+  background:linear-gradient(120deg,#000,#222);
+  z-index:-1;
+}
+.game-wrapper{
+  max-width:980px;
+  margin:40px auto;
+  background:rgba(255,255,255,0.9);
+  border-radius:14px;
+  padding:20px 30px;
+  box-shadow:0 4px 18px rgba(0,0,0,0.25);
+}
+.header-box{
+  display:flex;
+  justify-content:space-between;
+  border-bottom:2px solid #ddd;
+  padding-bottom:10px;
+}
+.title{font-size:1.4rem;font-weight:bold;color:#222}
+.info{text-align:right;font-size:.9rem}
+.timer{
+  margin-top:6px;
+  font-size:1rem;
+  font-weight:bold;
+  padding:6px 12px;
+  background:#fff;
+  border-radius:18px;
+  border:2px solid #ddd;
+  display:inline-block;
+}
+.levels{
+  margin:15px 0;
+  text-align:center;
+}
+.levels button{
+  margin:4px;
+  padding:8px 14px;
+  border:none;
+  border-radius:8px;
+  font-weight:bold;
+  cursor:pointer;
+  background:#444;
+  color:#fff;
+}
+.levels button.active{
+  background:#6ba8ff;
+}
+.clue-box{
+  margin-top:18px;
+  padding:14px;
+  background:#f7f7f7;
+  border-left:4px solid #6ba8ff;
+  border-radius:8px;
+  font-size:1rem;
+}
+.letters-container{
+  margin-top:28px;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:center;
+  gap:10px;
+}
+.letter{
+  width:60px;
+  height:60px;
+  background:#fff;
+  border-radius:8px;
+  font-size:1.6rem;
+  font-weight:bold;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  box-shadow:0 4px 8px rgba(0,0,0,0.15);
+  cursor:pointer;
+}
+.answer-container{
+  margin-top:25px;
+  display:flex;
+  justify-content:center;
+  flex-wrap:wrap;
+  gap:10px;
+  min-height:70px;
+}
+.slot{
+  width:60px;
+  height:60px;
+  background:#eaeaea;
+  border-radius:8px;
+  border:2px dashed #bdbdbd;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-size:1.6rem;
+  font-weight:bold;
+}
+.btns{
+  margin-top:30px;
+  display:flex;
+  justify-content:center;
+  gap:14px;
+}
+button{
+  padding:10px 20px;
+  background:#6ba8ff;
+  color:#fff;
+  font-size:1rem;
+  font-weight:bold;
+  border:none;
+  border-radius:8px;
+  cursor:pointer;
+}
+#feedback{
+  font-size:1.3rem;
+  margin-top:20px;
+  text-align:center;
+  font-weight:bold;
+}
+.ok{color:#009b4c;}
+.bad{color:#cc0000;}
+</style>
+</head>
+<body>
+
+<div class="bg"></div>
+
+<div class="game-wrapper">
+
+  <div class="header-box">
+    <div class="title">Ordena los huesos del perro</div>
+    <div class="info">
+      Palabra <span id="qNum">1</span>/<span id="qTotal">1</span><br>
+      <div class="timer">⏱ <span id="time">60</span>s</div>
+    </div>
+  </div>
+
+  <div class="levels">
+    <button onclick="setLevel(0)" id="btn0" class="active">Cabeza</button>
+    <button onclick="setLevel(1)" id="btn1">Tronco</button>
+    <button onclick="setLevel(2)" id="btn2">Extremidades</button>
+  </div>
+
+  <div class="clue-box" id="clueText"></div>
+  <div class="letters-container" id="lettersPool"></div>
+  <div class="answer-container" id="answerSlots"></div>
+
+  <div class="btns">
+    <button onclick="checkAnswer()">✔ Comprobar</button>
+    <button onclick="resetWord()">⟲ Reiniciar</button>
+    <button onclick="nextWord()">Siguiente ➜</button>
+  </div>
+
+  <div id="feedback"></div>
+
+</div>
+
+<script>
+const levels = [
+  [
+    {answer:"CRANEO",clue:"Protege el cerebro."},
+    {answer:"MANDIBULA",clue:"Hueso inferior de la boca."},
+    {answer:"MAXILAR",clue:"Hueso superior con dientes."},
+    {answer:"ATLAS",clue:"Primera vértebra cervical."},
+    {answer:"EJE",clue:"Segunda vértebra cervical."}
+  ],
+  [
+    {answer:"VERTEBRA CERVICAL",clue:"Vértebras del cuello."},
+    {answer:"VERTEBRA TORACICA",clue:"Vértebras del tórax."},
+    {answer:"VERTEBRA LUMBAR",clue:"Región baja de la columna."},
+    {answer:"SACRO",clue:"Une columna con pelvis."},
+    {answer:"COSTILLA",clue:"Protege pulmones y corazón."}
+  ],
+  [
+    {answer:"FEMUR",clue:"Hueso del muslo."},
+    {answer:"TIBIA",clue:"Hueso principal de la pierna."},
+    {answer:"FIBULA",clue:"Hueso lateral de la pierna."},
+    {answer:"TARSO",clue:"Huesos del tobillo."},
+    {answer:"METATARSO",clue:"Huesos del pie trasero."}
+  ]
+];
+
+let currentLevel=0;
+let words=levels[0];
+let index=0;
+let timer;
+let timeLeft=60;
+
+function setLevel(n){
+  currentLevel=n;
+  words=levels[n];
+  index=0;
+  document.querySelectorAll(".levels button").forEach(b=>b.classList.remove("active"));
+  document.getElementById("btn"+n).classList.add("active");
+  loadWord();
+}
+
+document.getElementById("qTotal").textContent=words.length;
+
+function loadWord(){
+  const data=words[index];
+  document.getElementById("qNum").textContent=index+1;
+  document.getElementById("qTotal").textContent=words.length;
+  document.getElementById("clueText").textContent=data.clue;
+
+  const pool=document.getElementById("lettersPool");
+  const slots=document.getElementById("answerSlots");
+  pool.innerHTML="";
+  slots.innerHTML="";
+  document.getElementById("feedback").textContent="";
+
+  const letters=data.answer.replace(/ /g,"").split("").sort(()=>Math.random()-0.5);
+  letters.forEach(ch=>{
+    const div=document.createElement("div");
+    div.className="letter";
+    div.textContent=ch;
+    div.onclick=()=>moveToSlot(div);
+    pool.appendChild(div);
+  });
+
+  for(let i=0;i<data.answer.replace(/ /g,"").length;i++){
+    const div=document.createElement("div");
+    div.className="slot";
+    div.onclick=()=>returnLetter(div);
+    slots.appendChild(div);
+  }
+  resetTimer();
+}
+
+function moveToSlot(letter){
+  const slots=[...document.querySelectorAll(".slot")];
+  const slot=slots.find(s=>s.textContent==="");
+  if(!slot)return;
+  slot.textContent=letter.textContent;
+  letter.remove();
+}
+
+function returnLetter(slot){
+  if(!slot.textContent)return;
+  const pool=document.getElementById("lettersPool");
+  const div=document.createElement("div");
+  div.className="letter";
+  div.textContent=slot.textContent;
+  div.onclick=()=>moveToSlot(div);
+  pool.appendChild(div);
+  slot.textContent="";
+}
+
+function checkAnswer(){
+  const correct=words[index].answer.replace(/ /g,"");
+  let user="";
+  document.querySelectorAll(".slot").forEach(s=>user+=s.textContent);
+  const fb=document.getElementById("feedback");
+  if(user===correct){
+    fb.textContent="✔ Correcto";
+    fb.className="ok";
+    clearInterval(timer);
+  }else{
+    fb.textContent="✘ Incorrecto";
+    fb.className="bad";
+  }
+}
+
+function resetWord(){loadWord();}
+function nextWord(){if(index<words.length-1){index++;loadWord();}}
+
+function resetTimer(){
+  clearInterval(timer);
+  timeLeft=60;
+  document.getElementById("time").textContent=timeLeft;
+  timer=setInterval(()=>{
+    timeLeft--;
+    document.getElementById("time").textContent=timeLeft;
+    if(timeLeft<=0){
+      clearInterval(timer);
+      document.getElementById("feedback").textContent="⏱ Tiempo agotado";
+      document.getElementById("feedback").className="bad";
+    }
+  },1000);
+}
+
+loadWord();
+</script>
+
+</body>
+</html>
 
