--- a/Vale/Perro/Huesos/2/index.html
+++ b/Vale/Perro/Huesos/2/index.html
@@ -38,12 +38,9 @@ h2{color:#00ffff;}
 }
 .niveles .activo{background:#00aaff;}
 
-.pista{margin:18px 0; font-size:1.2rem;}
-.lineas{
-  font-size:2rem;
-  letter-spacing:12px;
-  margin:20px 0;
-}
+.pista{margin:12px 0; font-size:1.2rem;}
+.lineas{font-size:2rem; letter-spacing:12px; margin:14px 0;}
+
 input{
   padding:10px;
   font-size:1.1rem;
@@ -54,7 +51,7 @@ input{
 }
 button{
   padding:10px 18px;
-  margin:8px;
+  margin:6px;
   border:none;
   border-radius:8px;
   font-weight:bold;
@@ -66,7 +63,7 @@ button{
 #errores{color:#ff4444; font-size:1.1rem;}
 #intentos{font-size:1rem;}
 
-#msg{font-size:1.4rem;margin-top:20px;}
+#msg{font-size:1.4rem;margin-top:10px;}
 .ok{color:#00cc66;}
 .bad{color:#ff4444;}
 
@@ -74,6 +71,22 @@ button{
   max-width:100%;
   border-radius:12px;
   box-shadow:0 0 15px #000;
+}
+
+/* BARRA DE PROGRESO */
+.barra{
+  width:100%;
+  height:16px;
+  background:#333;
+  border-radius:10px;
+  overflow:hidden;
+  margin:10px 0 18px;
+}
+.barra-inner{
+  height:100%;
+  width:0%;
+  background:linear-gradient(90deg,#00ffcc,#00aaff);
+  transition:width .3s;
 }
 </style>
 </head>
@@ -89,6 +102,11 @@ button{
     <button onclick="setNivel(0)" id="b0" class="activo">Cabeza</button>
     <button onclick="setNivel(1)" id="b1">Tronco</button>
     <button onclick="setNivel(2)" id="b2">Extremidades</button>
+  </div>
+
+  <!-- BARRA DE PROGRESO -->
+  <div class="barra">
+    <div class="barra-inner" id="barra"></div>
   </div>
 
   <div class="pista" id="pista"></div>
@@ -162,6 +180,8 @@ function cargar(){
   document.getElementById("pista").textContent =
     "Número " + data.numero + " – " + data.pista;
 
+  document.getElementById("msg").textContent = "";
+  actualizarBarra();
   actualizar();
 }
 
@@ -170,6 +190,12 @@ function actualizar(){
   document.getElementById("errores").textContent = "Errores: " + errores.join(", ");
   document.getElementById("intentos").textContent = "Intentos restantes: " + intentos;
   document.getElementById("letra").value = "";
+}
+
+function actualizarBarra(){
+  const total = niveles[nivel].length;
+  const porcentaje = (i / total) * 100;
+  document.getElementById("barra").style.width = porcentaje + "%";
 }
 
 function probarLetra(){
@@ -206,7 +232,9 @@ function siguiente(){
   if(i < niveles[nivel].length - 1){
     i++;
     cargar();
-    document.getElementById("msg").textContent = "";
+  } else {
+    document.getElementById("barra").style.width = "100%";
+    document.getElementById("msg").textContent = "✅ Nivel completado";
   }
 }
 
